--- a/RadiumBrowser/Info.plist
+++ b/RadiumBrowser/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Radium</string>
+	<string>Onbibi</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -57,9 +57,9 @@
 		</array>
 	</dict>
 	<key>FacebookAppID</key>
-	<string>1438723366248758</string>
+	<string>1364419340421674</string>
 	<key>FacebookDisplayName</key>
-	<string>Radium Web Browser</string>
+	<string>Onbibi Browser</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
